fix wrong margin

--- a/webui/styles.css
+++ b/webui/styles.css
@@ -548,6 +548,7 @@ select {
 
   .footer-info {
     display: flex;
+    align-items: center;
     gap: 8px;
     margin-left: auto;
     background: none;
